[package]
name = "chopstick"
description = "A commandline file slicing and unslicing utility"
categories = ["command-line-utilities"]
version = "0.2.3"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/chopstick"
repository = "https://codeberg.org/alpha-tango-kilo/chopstick"

[dependencies]
bytesize = "1.1"
os_str_bytes = "6.0"
walkdir = "2.3"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
rand = "0.8"
rand_pcg = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
