[package]
name = "chopstick"
description = "A commandline file slicing and unslicing utility"
categories = ["command-line-utilities"]
version = "1.0.0"
edition = "2021"
rust-version = "1.58"
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://codeberg.org/alpha-tango-kilo/chopstick"
repository = "https://codeberg.org/alpha-tango-kilo/chopstick"

[dependencies]
bytesize = "1.1"
os_str_bytes = "6.0"
walkdir = "2.3"

[dependencies.clap]
version = "3.0"
default-features = false
features = ["std"]

[dependencies.sysinfo]
version = "0.23"
default-features = false

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
rand = "0.8"
rand_pcg = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.tiny]
inherits = "release"
opt-level = "z"
strip = true
